// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jdHRdX jytLOl"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jdHRdX jytLOl"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jdHRdX jytLOl"
>
  <span
    className="sc-dluQYU dSZXDB"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jdHRdX jytLOl"
>
  <div
    className="sc-flkpTi fkOWOm"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jdHRdX hajcWA"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jdHRdX fKvbls"
  size="small"
/>
`;
